--- a/src/file_transfer.form
+++ b/src/file_transfer.form
@@ -37,18 +37,6 @@
               <text value="Home"/>
             </properties>
           </component>
-          <component id="9f41" class="javax.swing.JTextPane" binding="ftpFilePane">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="300"/>
-                <maximum-size width="1200" height="800"/>
-              </grid>
-            </constraints>
-            <properties>
-              <editable value="false"/>
-              <text value=""/>
-            </properties>
-          </component>
           <component id="425fc" class="javax.swing.JTextPane" binding="computerFilePane">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -60,6 +48,14 @@
               <editable value="false"/>
               <text value=""/>
             </properties>
+          </component>
+          <component id="9248f" class="javax.swing.JTree" binding="ftpTree">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
