--- a/src/file_transfer.form
+++ b/src/file_transfer.form
@@ -10,55 +10,6 @@
       <font/>
     </border>
     <children>
-      <grid id="11b08" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="500"/>
-            <maximum-size width="1200" height="800"/>
-          </grid>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="fb0aa" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="FTP Server"/>
-            </properties>
-          </component>
-          <component id="a2cb7" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Home"/>
-            </properties>
-          </component>
-          <component id="425fc" class="javax.swing.JTextPane" binding="computerFilePane">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="300"/>
-                <maximum-size width="1200" height="800"/>
-              </grid>
-            </constraints>
-            <properties>
-              <editable value="false"/>
-              <text value=""/>
-            </properties>
-          </component>
-          <component id="9248f" class="javax.swing.JTree" binding="ftpTree">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-        </children>
-      </grid>
       <grid id="242ba" binding="activityStatus" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
@@ -93,7 +44,7 @@
           </component>
         </children>
       </grid>
-      <grid id="a6a8c" layout-manager="GridLayoutManager" row-count="2" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="a6a8c" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
@@ -101,16 +52,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="f723c" class="javax.swing.JTextField" binding="fileNameText">
-            <constraints>
-              <grid row="0" column="3" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
-          </component>
           <component id="922a2" class="javax.swing.JButton" binding="uploadButton" default-binding="true">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -135,43 +76,25 @@
               <text value="Delete"/>
             </properties>
           </component>
-          <component id="ee958" class="javax.swing.JButton" binding="goToButton" default-binding="true">
+        </children>
+      </grid>
+      <grid id="ccbec" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="1" use-parent-layout="false">
+            <minimum-size width="-1" height="300"/>
+            <preferred-size width="-1" height="500"/>
+            <maximum-size width="-1" height="700"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="9248f" class="javax.swing.JTree" binding="ftpTree">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties>
-              <text value="Go To"/>
-            </properties>
-          </component>
-          <component id="7618f" class="javax.swing.JButton" binding="goUpButton" default-binding="true">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Go Up"/>
-            </properties>
-          </component>
-          <component id="1a708" class="javax.swing.JRadioButton" binding="computerRadioButton" default-binding="true">
-            <constraints>
-              <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="30" height="70"/>
-              </grid>
-            </constraints>
-            <properties>
-              <selected value="false"/>
-              <text value="Computer"/>
-            </properties>
-          </component>
-          <component id="ca07c" class="javax.swing.JRadioButton" binding="ftpRadioButton">
-            <constraints>
-              <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="30" height="50"/>
-              </grid>
-            </constraints>
-            <properties>
-              <selected value="true"/>
-              <text value="FTP"/>
-            </properties>
+            <properties/>
           </component>
         </children>
       </grid>
