--- a/src/file_transfer.form
+++ b/src/file_transfer.form
@@ -32,7 +32,7 @@
               <text value="No Activity"/>
             </properties>
           </component>
-          <component id="c7b54" class="javax.swing.JProgressBar" binding="progressBar1" default-binding="true">
+          <component id="c7b54" class="javax.swing.JProgressBar" binding="progressBar">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <minimum-size width="200" height="20"/>
