--- a/src/file_transfer.form
+++ b/src/file_transfer.form
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="file_transfer">
   <grid id="27dc6" binding="mainContainer" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="10" left="10" bottom="10" right="10"/>
+    <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="644" height="1697"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-2433571"/>
+      <preferredSize width="624" height="625"/>
+    </properties>
     <border type="none">
       <font/>
+      <title-color color="-16777216"/>
     </border>
     <children>
       <grid id="242ba" binding="activityStatus" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
